# python-type-hints

./: .gitignore  Makefile  README.md  pyproject.toml  python_type_hints.ipynb
demo/: ide.py  ide_typed.py  ide_typed_all_good.py
